ci: updating ci for zensical / mkdocs

--- a/ci/build
+++ b/ci/build
@@ -2,11 +2,10 @@
 
 set -e -x
 
-apk add --no-progress --quiet ytt
-
 git config --global user.email "concourseteam+concourse-github-bot@gmail.com"
 git config --global user.name "Concourse Bot"
 
+# Change to the docs repo
 pushd docs
   if [ -e .git ] && git remote | grep origin >/dev/null; then
     # undo single-branch clone and fetch gh-pages
@@ -14,16 +13,20 @@ pushd docs
     git fetch origin gh-pages
 
     ref=$(git rev-parse HEAD)
-    git checkout gh-pages
-    git pull
-    git merge --no-edit $ref
-
-    # clear out old content
-    git rm *.html || true
-    git rm search_index.json || true
+    git checkout --orphan gh-pages
+    git rm -rf .
   fi
 
-  ./scripts/build
+  # Install dependencies
+  pip install zensical nodeenv
+  nodeenv env --node=22.21.1
+  npm ci
+
+  # Create site directory
+  npm run build
+
+  # Copy well-known for BlueSky
+  cp .well-known site/.well-known
 
   if [ -e .git ]; then
     git add -A
