--- a/ci/build
+++ b/ci/build
@@ -19,7 +19,7 @@ pushd docs
   cp -R .well-known site/.well-known
 
   if [ -e .git ]; then
-    git checkout --orphan gh-pages
+    git checkout gh-pages
     git rm -rf .
 
     rm -rf .venv/ node_modules/ env/ .cache/ overrides/ docs/ .idea/
