ci: install git into build

--- a/ci/build
+++ b/ci/build
@@ -2,6 +2,8 @@
 
 set -e -x
 
+apk add git
+
 git config --global user.email "concourseteam+concourse-github-bot@gmail.com"
 git config --global user.name "Concourse Bot"
 
