--- a/ci/build
+++ b/ci/build
@@ -29,7 +29,12 @@ pushd docs
     mv site/{.,}* .
     rmdir site
 
-    echo "concourse-ci.org" > CNAME
+    # Create CNAME file
+    echo -n "concourse-ci.org" > CNAME
+
+    # Create robots.txt file
+    echo "User-agent: *" > robots.txt
+    echo -n "Disallow: /single-page.html" >> robots.txt
 
     git add -A
     git commit --allow-empty -m "build"
