--- a/ci/build
+++ b/ci/build
@@ -10,7 +10,7 @@ git config --global user.name "Concourse Bot"
 # Change to the docs repo
 pushd docs
   # Install dependencies
-  pip install mkdocs-material mkdocs-redirects mkdocs-glightbox nodeenv
+  pip install zensical nodeenv
   nodeenv env --node=22.21.1
   npm ci
 
